instance updated in Timeseries sample notebook

--- a/Streams-TimeseriesForecast.ipynb
+++ b/Streams-TimeseriesForecast.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "from streamsx.topology import context\n",
     "\n",
-    "streams_instance_name = \"pzo-tools\" ## Change this to Streams instance\n",
+    "streams_instance_name = ## Change this to Streams instance\n",
     "try:\n",
     "    from icpd_core import icpd_util\n",
     "    cfg = icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
@@ -737,7 +737,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "80b861b4-bc21-4333-9f0a-dd249ba95796"
+   },
    "source": [
     "## Learn more\n",
     "\n",
@@ -747,14 +749,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "23620cf7-de97-4a31-8f1d-839dd41072a8"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
