Missing steps to open job graph and get logs.

--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -663,7 +663,11 @@
     "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
     "    1. Under the **Job name** column, find your job based on the `Job Name` [printed in section 3](#launch). This will list all of the job runs for that job.\n",
     "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    1. This will open the Job Details page.\n",
     "    \n",
+    "        1. To open the Job Graph, click the **Streams job graph** link.\n",
+    "        \n",
+    "        1. To download logs, click the **Logs** tab and click **Create snapshot**, then download the snapshot.    \n",
     "\n",
     "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4)."
    ]
