--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -6,10 +6,7 @@
     "id": "e0973593-fcb6-4b3e-bf76-61b78f5994b7"
    },
    "source": [
-    "<table style=\"border: none\" align=\"left\">\n",
-    "   <tr style=\"border: none\">\n",
-    "      <th style=\"border: none\"><font face=\"verdana\" size=\"5\" color=\"black\"><b>Use WML online scoring on CPD to predict Iris species on streaming data</b></th>\n",
-    "</table>"
+    "## Use a Watson Machine Learning model with streaming data in Cloud Pak for Data"
    ]
   },
   {
@@ -1244,8 +1241,13 @@
     "\n",
     "    1. Open your project and click on the **Jobs** tab. This will show a list of the project's jobs.\n",
     "    1. Under the **Job name** column, find your job based on the `Job Name` [printed when you submitted the job](#submit). This will list all of the job runs for that job.\n",
-    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above.\n",
+    "    1. Click the **Run name** to open the job run. The run name will be the same as the `Job Name` printed above. \n",
+    "    1. This will open the Job Details page.\n",
     "    \n",
+    "        1. To open the Job Graph, click the **Streams job graph** link.\n",
+    "        \n",
+    "        1. To download logs, click the **Logs** tab and click **Create snapshot**, then download the snapshot.   \n",
+    "\n",
     "\n",
     "- **For all other development environments and versions of Streams**, [see this page for more information](http://ibmstreams.github.io/streamsx.documentation/docs/spl/quick-start/qs-4).\n",
     "\n",
